sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:13: error: ';' expected but 'if' found.
  } if (isSorted) {return;}
    ^